--- a/src/grupo3/reto2/model/Config.properties
+++ b/src/grupo3/reto2/model/Config.properties
@@ -1,5 +1,6 @@
 # To change this license header, choose License Headers in Project Properties.
 # To change this template file, choose Tools | Templates
 # and open the template in the editor.
-PORT= 5050
-Ip = localhost
+#PORT= 5050
+#Ip = localhost
+restfulURI=http://localhost:8080/Reto2_G3_Server/webresources
